--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,16 @@ on:
       - 'bugfix/**' 
   workflow_dispatch:
 
+env:  
+  OCTOPUS_PROJECT_NAME: Trident
+  OCTOPUS_FEATURE_BRANCH_CHANNEL: Default
+  OCTOPUS_FEATURE_BRANCH_ENVIRONMENT: Development
+  OCTOPUS_RELEASE_CHANNEL: Release
+  OCTOPUS_RELEASE_ENVIRONMENT: Staging  
+  OCTOPUS_SPACE: Integration-Flyway
+  OCTOPUS_API_KEY: ${{ secrets.OCTOPUSSERVERAPIKEY }}
+  OCTOPUS_URL: ${{ secrets.OCTOPUSSERVERURL }}
+
 jobs:
 
   build-and-push-application:
