--- a/Resources/Scripts/PackagePushAndDeploy.yaml
+++ b/Resources/Scripts/PackagePushAndDeploy.yaml
@@ -41,6 +41,7 @@
       - name: create release
         uses: OctopusDeploy/create-release-action@v3
         with:
+          space: ${{ env.OCTOPUS_SPACE }}
           project: ${{ env.OCTOPUS_PROJECT_NAME }}
           channel: ${{ steps.ReleaseNum.outputs.OCTOPUS_CHANNEL }}
           release_number: ${{ steps.ReleaseNum.outputs.APP_VERSION }}
@@ -50,6 +51,7 @@
         uses: OctopusDeploy/deploy-release-action@v3
         id: "deploy_release"
         with:
+          space: ${{ env.OCTOPUS_SPACE }}
           project: ${{ env.OCTOPUS_PROJECT_NAME }}
           release_number: ${{ steps.ReleaseNum.outputs.APP_VERSION }}
           environments: ${{ steps.ReleaseNum.outputs.OCTOPUS_ENVIRONMENT }}
@@ -59,6 +61,7 @@
         uses: OctopusDeploy/deploy-release-action@v3
         id: "deploy_release"
         with:
+          space: ${{ env.OCTOPUS_SPACE }}
           project: ${{ env.OCTOPUS_PROJECT_NAME }}
           release_number: ${{ steps.ReleaseNum.outputs.APP_VERSION }}
           environments: ${{ steps.ReleaseNum.outputs.OCTOPUS_ENVIRONMENT }}
