--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ env:
   OCTOPUS_FEATURE_BRANCH_ENVIRONMENT: Dev
   OCTOPUS_RELEASE_CHANNEL: Release
   OCTOPUS_RELEASE_ENVIRONMENT: Staging  
-  OCTOPUS_SPACE: Octopet Shop Demo
+  OCTOPUS_SPACE: ${{ secrets.OCTOPUS_SPACE }}
   OCTOPUS_API_KEY: ${{ secrets.OCTOPUSSERVERAPIKEY }}
   OCTOPUS_URL: ${{ secrets.OCTOPUSSERVERURL }}
 
