Update build.yml to reference Trident CAC project

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 env:  
-  OCTOPUS_PROJECT_NAME: Trident
+  OCTOPUS_PROJECT_NAME: Trident CAC
   OCTOPUS_FEATURE_BRANCH_CHANNEL: Default
   OCTOPUS_FEATURE_BRANCH_ENVIRONMENT: Dev
   OCTOPUS_RELEASE_CHANNEL: Release
